--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,16 @@ services:
     build:
       context: .
       dockerfile: ./compose/Dockerfile
-    command: python manage.py runserver 0.0.0.0:8000
+#    command: /user/src/app/start
+    command: tail -f /dev/null
     volumes:
       - ./app/:/usr/src/app/
     ports:
       - 8000:8000
     env_file:
       - ./envs/.env.dev
+    depends_on:
+      - db
 
   db:
     image: postgres:12-alpine
@@ -31,6 +34,8 @@ services:
       - pgadmin:/root/.pgadmin
     ports:
       - 5050:80
+    depends_on:
+      - db
 
 volumes:
   postgres_data:
