--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build:
       context: .
-      dockerfile: ./compose/Dockerfile
+      dockerfile: compose/Dockerfile
     command: /usr/src/start
 #    command: tail -f /dev/null
     volumes:
