--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: Continuous Integration and Delivery
+name: CI/CD
 
 on: [push]
 
 env:
   WEB_IMAGE: docker.pkg.github.com/$GITHUB_REPOSITORY/web:latest
-  NGINX_IMAGE: docker.pkg.github.com/$GITHUB_REPOSITORY/nginx:latest
+  NGINX_IMAGE: docker.pkg.github.com/$GITHUB_REPOSITORY/moviecatalog-nginx:latest
 
 jobs:
 
@@ -17,14 +17,25 @@ jobs:
       - name: Add environment variables to .env
         run: |
           echo DEBUG=0 >> .env
-          echo SQL_ENGINE=django.db.backends.postgresql >> .env
-          echo DATABASE=postgres >> .env
+          echo DJANGO_ALLOWED_HOSTS=${{ secrets.DJANGO_ALLOWED_HOSTS }} >> .env
           echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
+
+          echo DATABASE=postgres >> .env
+          echo SQL_ENGINE=django.db.backends.postgresql >> .env
+          echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
           echo SQL_DATABASE=${{ secrets.SQL_DATABASE }} >> .env
           echo SQL_USER=${{ secrets.SQL_USER }} >> .env
           echo SQL_PASSWORD=${{ secrets.SQL_PASSWORD }} >> .env
           echo SQL_HOST=${{ secrets.SQL_HOST }} >> .env
           echo SQL_PORT=${{ secrets.SQL_PORT }} >> .env
+
+          echo POSTGRES_DB=${{ secrets.SQL_DATABASE }} >> .env
+          echo POSTGRES_USER=${{ secrets.SQL_USER }} >> .env
+          echo POSTGRES_PASSWORD=${{ secrets.SQL_PASSWORD }} >> .env
+
+          echo PGADMIN_DEFAULT_EMAIL=${{ secrets.PGADMIN_DEFAULT_EMAIL }} >> .env
+          echo PGADMIN_DEFAULT_PASSWORD=${{ secrets.PGADMIN_DEFAULT_PASSWORD }} >> .env
+
       - name: Set environment variables
         run: |
           echo ::set-env name=WEB_IMAGE::${{ env.WEB_IMAGE }}
