--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,8 +50,8 @@ jobs:
           docker pull ${{ env.NGINX_IMAGE }} || true
       - name: Build images
         run: |
-          docker build -f _build_web_prod_image.yml build
-          docker build -f _build_nginx_prod_image.yml build
+          docker-compose -f _build_web_prod_image.yml build
+          docker-compose -f _build_nginx_prod_image.yml build
       - name: Push images
         run: |
           docker push ${{ env.WEB_IMAGE }}
