--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ jobs:
           POSTGRES_PASSWORD: runner
           DATABASE_TEST_URL: postgres://runner:runner@postgres:5432/users
         run: |
-          cd /usr/src/app
+          cd app
           pytest -p no:warnings --cov=.
           flake8 .
           black --check --exclude=migrations .
